--- a/Work.html
+++ b/Work.html
@@ -10,39 +10,117 @@
   <section>
     <div class="scroll">
       <div>
-         --Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>
+         --Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com</span>
       </div>
       <div>
-         --Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>--Poster Archive<span>--Poster Archive</span>
+         --Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com</span>
       </div>
     </div>
   </section>
   <ul class="nav">
-    <li class="home" class="customcursor">
+    <li class="navbttn" id="home">
       <a class="customcursor" id="homelnk" href="Home.html">
         <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 43.7"><rect class="cls-1" x="26.4" y="11.8" width="4.9" height="4.9"/><path class="cls-1" d="M21.5 0C9 0 0 8.5 0 21.9S9 43.7 21.5 43.7 43 35.3 43 21.9 34.1 0 21.5 0Zm0.1 39.8C10.9 39.7 4.3 32.7 4.3 21.9c0-11 6.6-18.1 17.2-18.1 10.8 0 17.2 7.1 17.2 18S32.3 39.8 21.5 39.8Z"/><path class="cls-1" d="M13.9 17.2a2.9 2.9 0 0 0 2.9-3 2.9 2.9 0 0 0-3-2.9A2.8 2.8 0 0 0 11 14.2 2.9 2.9 0 0 0 13.9 17.2Z"/><path class="cls-1" d="M26.5 20.2l-0.1 4.2c0 5.6-2.2 7.4-5.1 7.4s-5-1.9-5.1-6.4H11.5c-0.1 7.5 3.9 10.8 9.9 10.8 6.2 0 9.8-3.3 9.9-12.2v-3.8Z"/></svg>
       </a>
     </li>
-    <li class="navbttn" id="systmidnt"><a class="customcursor" href="Work.html">Work</a></li>
+    <li class="navbttn" id="systmidnt" ><a class="customcursor" href="Work.html">Work</a></li>
     <li class="navbttn" id="pstrarch"><a class="customcursor"  href="Posters.html">Poster Archive</a></li>
     <li class="navbttn" id="typdsgn"><a class="customcursor" href="Type Design.html">Type Design</a></li>
-    <li class="navbttn" id="objects"><a class="customcursor" href="POSTERS.html">Design Club</a></li>
-    </li>
   </ul>
-  <div class="prvcntr">
-    <img class="preview" id="ztaprv" src="Images/Album Cover Front.png"/>
-  </div>
+  <p class="wrkttl"><a href="zZTA.html" class="customcursor" class="wrklink">Zap the Angel</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> An album cover designed for conceptual artist: Zap the Angel. Zap is a gospel/rap artist who explores the relationship between the histories of rap and gospel. Specifically their shared energy and tension between their ideals.</p>
+    <p class="tags"> Album Cover, World Building, Systems</P>
+  </main>
   <ul class="work">
-    <input type="checkbox" id="album"/>
-    <li class="albmcvr"><label for="album" class="customcursor">Zap the Angel</ilabel></li>
-      <ul id="zta">
-        <li ><img src="Images/Album Cover Back.png" alt="Joke Book"/></li>
-        <li ><img src="Images/Album Cover Front.png" alt="Joke Book"/></li>
-      </ul>
-    </li>
-    <li class=""><label for="" class="customcursor">Type Specimen Shirt</ilabel></li>
-      <ul id="">
-      </ul>
-    </li>
+    <img class="img" src="Images/Album Cover Front.png" alt="Album Cover"/>
+  </ul>
+  <p class="wrkttl"><a href="zDC.html" class="customcursor" class="wrklink">Design Club</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> A club formed to bring the design community closer together at PNCA with the vision of global expansion. Co-founded, co-directed, co-presidented, and co-art directed with my buddy <a id="link" class="customcursor" href="http://oskarradon.com/projects" target="_blank">Oskar Radon</a>.</p>
+    <p class="tags"> World Building, Education, Community Building</P>
+  </main>
+  <ul class="work">
+    <img class="img" src="Images/DESIGN_CLUB_POSTER_01.png" alt="Album Cover"/>
+  </ul>
+  <p class="wrkttl"><a href="zAramid.html" class="customcursor" class="wrklink">Aramid Apparel</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> Aramid is an apparel brand that draws on the visuals of car culture as a guide to fashion design.</p>
+    <p class="tags">Fashion Design, Research</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/LowriderSuit.png" alt="Joke Book"/>
+  </ul>
+  <p class="wrkttl"><a href="zRestaraunt.html" class="customcursor" class="wrklink">More is Nice</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> (Concept) Brand identity for More is Nice, an Iranian fast food joint located in LA. It embodies the traditional Iranian home and tradition, bringing warmth and intention to the fast food industry.</p>
+    <p class="tags">Brand Identity, World Building</P>
+  </main>
+  <ul class="work" id="restaurant">
+    <img class="img" src="Images/JASON_RESTAURANT_SIGN_MOCKUP.jpg" alt="More is Nice Identity"/>
+  </ul>
+  <p class="wrkttl"><a href="zTypeTee.html" class="customcursor" class="wrklink">Type Specimen Tee</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> A hand-printed T-Shirt that acts as a simple type specimen for a modular alphabet.</p>
+    <p class="tags"> Type Design, Screenprint, Fashion Design</P>
+  </main>
+  <ul class="work" id="typetee">
+    <img class="img" src="Images/BLLRDS_SHIRT_BACK.png" alt="Billiards Shirt"/>
+  </ul>
+  <p class="wrkttl"><a href="zEXIT.html" class="customcursor" class="wrklink">Exit</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> A publication that explored the culture of streetball and it's history through image making. It's title comes from the role streetball played as an escape from poor living environments that Jewsish immigrants and Blacks were confined to living in the projects of big cities like New York, Bostonm and D.C.</p>
+    <p class="tags">Publication, Illustration</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/EXIT ILLUSTRAION SPREAD.png" alt="Streetball Publication"/>
+  </ul>
+  <p class="wrkttl"><a href="zHOGD.html" class="customcursor" class="wrklink">Graphic Design Book</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> A publication that was designed to be contrary to the typical book layout.</p>
+    <p class="tags">Publication, Curation</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/HOGD_TEXT+IMG_SPREAD.png" alt="Graphic Design Book"/>
+  </ul>
+  <p class="wrkttl"><a href="zJokeBook.html" class="customcursor" class="wrklink">Joke Book</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> A publication that used the deconstructed elements of the humor found in the American TV show "The Office" as a method for design.</p>
+    <p class="tags">Publication, Comedy</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/JB IMAGE_SPREAD.png" alt="Joke Book"/>
+  </ul>
+  <p class="wrkttl"><a href="zDLS.html" class="customcursor" class="wrklink">PNCA Design Lecture Series</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> A poster system developed for the Pacific Northwest College of Art's design lecture series. A custom modular font was developed for each poster.</p>
+    <p class="tags">Poster, Systems, Type Design, 3D</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/DLS03.jpg" alt="DLS Posters"/>
+  </ul>
+  <p class="wrkttl"><a href="zTypeTutorial.html" class="customcursor" class="wrklink">Type Tutorial</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> An online type workshop that teaches an easy and accessable process on how to build your own modular alphabet.</p>
+    <p class="tags">Education, Type Design</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/Design Club Type Tutorial11.jpg" alt="Type Tutorial"/>
+  </ul>
+  <p class="wrkttl"><a href="z3V3.html" class="customcursor" class="wrklink">3V3 Basketball Tournament</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> Poster and basketball court design for a local 3V3 basketball tournament in Portland, OR.</p>
+    <p class="tags">Systems, World Building</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/3V3_EVENT_BASKTEBALL_COURT.jpg" alt="Joke Book"/>
+  </ul>
+  <p class="wrkttl"><a href="zFRINGE.html" class="customcursor" class="wrklink">FRINGE Design Lab</a></p>
+  <main class="dscrptncntnr">
+    <p class="description"> An design conference that takes the form of laboratory. Rather than sitting all day listening to people, you would be seeking to push the boundaries of design and image-making; engaging in innovative skillshare workshops.</p>
+    <p class="tags">Systems, World Building</P>
+  </main>
+  <ul class="work" >
+    <img class="img" src="Images/FRINGE_LANYARD.png" alt="Joke Book"/>
   </ul>
 </body>
