--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <section>
     <div class="scroll">
       <div>
-         -Available for hire or freelance-<span>-Available for hire or freelance-</span>-Available for hire or freelance-<span>-Available for hire or freelance-</span>-Available for hire or freelance-<span>-Available for hire or freelance-</span>-Available for hire or freelance-<span>-Available for hire or freelance-</span>
+         --Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com</span>
       </div>
       <div>
-         -Available for hire or freelance-<span>-Available for hire or freelance-</span>-Available for hire or freelance-<span>-Available for hire or freelance-</span>-Available for hire or freelance-<span>-Available for hire or freelance-</span>-Available for hire or freelance-<span>-Available for hire or freelance-</span>
+         --Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com</span>
       </div>
     </div>
   </section>
@@ -22,18 +22,17 @@
   </div>
   <ul class="nav">
     <li class="about" >About</li>
-    <li id="about"><img id="me" src="Assets/ME.jpg" align="left"/><p class="description">Jason is a designer currently based in Portland, OR. He loves meeting new people, nature, and taking 37 tries to land kickflips off of three stairs.</p></li>
+    <li id="about"><img id="me" src="Assets/ME.jpg"/><p class="description">Jason is a designer currently based in Portland, OR. He loves meeting new people, nature, and taking 37 tries to land kickflips off of three stairs.</p></li>
     <li class="work">work
       <ul class="dropdown">
         <li><a class="customcursor" href="Work.html">Work</a></li>
         <li><a class="customcursor" href="Posters.html">Poster Archive</a></li>
         <li><a class="customcursor" href="Type Design.html">Type Design</a></li>
-        <li><a class="customcursor" href="PUBLICATION.html">Design Club</a></li>
       </ul>
     </li>
   </ul>
   <div class="portblock">
-    <a href="ScheuermannJason_2020_Portfolio.pdf" target="_blank" class="customcursor">
+    <a href="Assets/ScheuermannJason_2020_Portfolio.pdf" target="_blank" class="customcursor" >
       <p class="portfolio">Portfolio.PDF</P>
     </a>
   </div>
