--- a/Type Design.html
+++ b/Type Design.html
@@ -16,15 +16,15 @@
   <section>
     <div class="scroll">
       <div>
-         --Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>
+         --Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com</span>
       </div>
       <div>
-         --Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>--Type Design<span>--Type Design</span>
+         --Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com--Jason Scheuermann<span>--(971) 336-2284</span>--jscheuermann99@gmail.com</span>
       </div>
     </div>
   </section>
   <ul class="nav">
-    <li class="home" class="customcursor">
+    <li class="navbttn" id="home" class="customcursor">
       <a class="customcursor" id="homelnk" href="Home.html">
         <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 43.7"><rect class="cls-1" x="26.4" y="11.8" width="4.9" height="4.9"/><path class="cls-1" d="M21.5 0C9 0 0 8.5 0 21.9S9 43.7 21.5 43.7 43 35.3 43 21.9 34.1 0 21.5 0Zm0.1 39.8C10.9 39.7 4.3 32.7 4.3 21.9c0-11 6.6-18.1 17.2-18.1 10.8 0 17.2 7.1 17.2 18S32.3 39.8 21.5 39.8Z"/><path class="cls-1" d="M13.9 17.2a2.9 2.9 0 0 0 2.9-3 2.9 2.9 0 0 0-3-2.9A2.8 2.8 0 0 0 11 14.2 2.9 2.9 0 0 0 13.9 17.2Z"/><path class="cls-1" d="M26.5 20.2l-0.1 4.2c0 5.6-2.2 7.4-5.1 7.4s-5-1.9-5.1-6.4H11.5c-0.1 7.5 3.9 10.8 9.9 10.8 6.2 0 9.8-3.3 9.9-12.2v-3.8Z"/></svg>
       </a>
@@ -32,20 +32,19 @@
     <li class="navbttn" id="systmidnt"><a class="customcursor" href="Work.html">Work</a></li>
     <li class="navbttn" id="pstrarch"><a class="customcursor"  href="Posters.html">Poster Archive</a></li>
     <li class="navbttn" id="typdsgn"><a class="customcursor" href="Type Design.html">Type Design</a></li>
-    <li class="navbttn" id="objects"><a class="customcursor" href="POSTERS.html">Design Club</a></li>
   </ul>
   <p class="facename">NH Sans</p>
-  <p class="facedescription">My first tyepface, it's not Helvetica.</p>
+  <p class="facedescription">My first typeface, it's not Helvetica.</p>
   <p contenteditable="true" class="fontdisplay">The Quick Brown Fox Jumps Over the Lazy Dog 1234567890</p>
-  <ul class="typefaces">
-    <li class="facename">Modular:</li>
-    <li><label for="Cloud" class="customcursor" id="cld">Cloud</label></li>
-    <li><label for="Speed" class="customcursor" id="spd">Speed</label></li>
-    <li><label for="Basic" class="customcursor" id="bsc">Basic</label></li>
-    <li><label for="Lattice" class="customcursor" id="lttc">Lattice</label></li>
-    <li><label for="Organic" class="customcursor" id="orgnc">Organic</label></li>
-    <li><label for="Invader" class="customcursor" id="invdr">Invader</label></li>
-  </ul>
+  <p class="facename">Modular</p>
   <p class="facedescription">An ever growing collection of experimental modular alphabets built through a quick and accesable process.</p>
-  <p contenteditable="true" class="modular">The quick brown fox jumps over the lazy dog 1234567890</p>
+  <ul class="typefaces">
+    <label for="Cloud" class="customcursor" id="cld">Cloud</label>
+    <label for="Speed" class="customcursor" id="spd">Speed</label>
+    <label for="Basic" class="customcursor" id="bsc">Basic</label>
+    <label for="Lattice" class="customcursor" id="lttc">Lattice</label>
+    <label for="Organic" class="customcursor" id="orgnc">Organic</label>
+    <label for="Invader" class="customcursor" id="invdr">Invader</label>
+  </ul>
+  <p contenteditable="true" id="modular" class="fontdisplay">The quick brown fox jumps over the lazy dog 1234567890</p>
 </body>
