--- a/Work.html
+++ b/Work.html
@@ -19,7 +19,7 @@
   </section>
   <ul class="nav">
     <li class="navbttn" id="home">
-      <a class="customcursor" id="homelnk" href="Home.html">
+      <a class="customcursor" id="homelnk" href="index.html">
         <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43 43.7"><rect class="cls-1" x="26.4" y="11.8" width="4.9" height="4.9"/><path class="cls-1" d="M21.5 0C9 0 0 8.5 0 21.9S9 43.7 21.5 43.7 43 35.3 43 21.9 34.1 0 21.5 0Zm0.1 39.8C10.9 39.7 4.3 32.7 4.3 21.9c0-11 6.6-18.1 17.2-18.1 10.8 0 17.2 7.1 17.2 18S32.3 39.8 21.5 39.8Z"/><path class="cls-1" d="M13.9 17.2a2.9 2.9 0 0 0 2.9-3 2.9 2.9 0 0 0-3-2.9A2.8 2.8 0 0 0 11 14.2 2.9 2.9 0 0 0 13.9 17.2Z"/><path class="cls-1" d="M26.5 20.2l-0.1 4.2c0 5.6-2.2 7.4-5.1 7.4s-5-1.9-5.1-6.4H11.5c-0.1 7.5 3.9 10.8 9.9 10.8 6.2 0 9.8-3.3 9.9-12.2v-3.8Z"/></svg>
       </a>
     </li>
